@@ -105,6 +105,7 @@ css/ui-darkness/images/ui-icons_a83300_256x240.png
 css/ui-darkness/images/ui-icons_cccccc_256x240.png
 css/ui-darkness/images/ui-icons_ffffff_256x240.png
 images/add.png
+images/adjust48.png
 images/air.png
 images/air48.png
 images/air_signal.png
