@@ -63,6 +63,7 @@ Version 1.0.xxxx (March xxth 2014)
 - Implemented: Report for RFXMeter Water
 - Updated: Highcharts 3.0.10
 - Implemented: Thermostat 3 (Mertik) now visible on dashboard
+- Fixed: Shortlog cleanup for Percentage/Fan
 
 Version 1.0.1396 (January 18th 2014)
 - Implemented: new commandline option to specify www root folder (-wwwroot)
